# MRTracking

./: CMakeLists.txt  README.md
MRTracking/: CMakeLists.txt  IGTLConnector.py  MRTracking.py  TrackingData.py
MRTracking/MRTrackingUtils/: catheter.py  catheterconfig.py  connector.py  panelbase.py  qcomboboxcatheter.py  qpointrecordingframe.py  recording.py  registration.py  reslice.py  statusdisplay.py  surfacemapping.py  trackingdata.py
